<resources>
    <string name="app_name">PassKeeper</string>
    <string name="log_in">Iniciar Sesión</string>
    <string name="button">Iniciar Sesión</string>
    <string name="atras">Volver</string>
    <string name="register">Registrarse</string>
    <string name="correo">Correo</string>
    <string name="password">Contraseña</string>
    <string name="password2">Repetir Contraseña</string>

    <!--Guardar Contraseña-->
    <string name="guardar_password">Nueva Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="usuario">Usuario</string>
    <string name="fingerprint">Usa tu Huella</string>
    <string name="url">URL</string>
    <string name="descripcion">Descripción</string>
    <string name="boton_guardar">Guardar</string>
    <string name="login">¿Ya tiene una cuenta?</string>
    <string name="link_login">Toque aquí para registrarse si ya tiene una cuenta</string>


    <!-- Usados exclusivamente en el registro -->
    <string name="btn_register">Registrarse</string>

    <!--Tus Contraseñas-->
    <string name="passwords">Tus Contraseñas</string>
    <string name="txtPasswords">No hay contraseñas  que mostrar, ¡por favor añada una!</string>
    <string name="btn_agregar">+</string>

    <!--Editar Contraseña-->
    <string name="edit_password">Editar Contraseña </string>
    <string name="password_e">Contraseña</string>
    <string name="url_e">URL</string>
    <string name="description_e">Descripción</string>

    <!--Ver Contraseña-->
    <string name="ver_password">Ver Contraseña</string>
    <string name="nombre_sitio">Sitio Web</string>
    <string name="usuario_nombre">Usuario</string>
    <string name="password_sitio">Contraseña</string>
    <string name="url_sitio">URL</string>
    <string name="descripcion_pass">Descripción</string>
    <!--<string name="last_date"> 28/09/2023</string>-->
  
    <!--Menu Popup-->
    <string name="op1">About</string>
    <string name="op2">Cerrar Sesión</string>

    <!--Splash-->
    <string name="autenticación">Autenticación</string>
    <string name="regresar_a_la_pantalla_anterior">Regresar a la pantalla anterior</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="buscar">Buscar</string>
    <string name="signo_de_exclamaci_n_que_indica_que_no_tiene_nunguna_contrasela_generada">Signo de exclamación que indica que no tiene nunguna contrasela generada</string>
    <string name="acceder_a_submen_con_opciones_de_cerrar_sesi_n_e_ir_a_about_us">Acceder a submenú con opciones de cerrar sesión e ir a About us</string>
    <string name="agregar_nueva_contrase_a">Agregar nueva contraseña</string>
    <string name="desplazamiento_vertical_de_contrase_as">Desplazamiento vertical de contraseñas</string>
    <string name="buscar_por_nombre">Buscar por nombre</string>
    <string name="toqui_aqui_para_agregar_una_nueva_contrase_a">Toqui aqui para agregar una nueva contraseña</string>
    <string name="agregar">+ Agregar</string>
    <string name="todo">Scroll</string>


</resources>