<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterPasswordActivity">

    <View
        android:id="@+id/viewBlue"
        android:layout_width="wrap_content"
        android:layout_height="365dp"
        android:background="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="329dp"
        android:layout_height="595dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="30dp"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="30dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/boton_atras_guardar"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="8dp"
                    android:backgroundTint="@color/blue"
                    android:contentDescription="@string/regresar_a_la_pantalla_anterior"
                    android:elevation="12dp"
                    app:cornerRadius="30dp"
                    app:icon="@drawable/arrow"
                    app:iconGravity="start"
                    app:iconSize="30dp"
                    app:iconTint="@color/white"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/textTitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:gravity="center_horizontal"
                    android:text="@string/guardar_password"
                    android:textColor="@color/text_accesibility"
                    android:textSize="24sp"
                    android:textStyle="italic" />
            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="411dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="110dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <!-- Primer campo de entrada -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/nombre"
                android:textColor="@color/greyLigth"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:boxStrokeColor="@color/greyLigth"
                app:hintTextColor="@color/greyLigth"
                app:startIconContentDescription="nombre icon"
                app:startIconDrawable="@drawable/globe"
                app:startIconTint="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/black"
                    app:hintTextColor="@color/greyLigth" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/usuario"
                android:textColor="@color/greyLigth"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:boxStrokeColor="@color/greyLigth"
                app:hintTextColor="@color/greyLigth"
                app:startIconContentDescription="Correo icon"
                app:startIconDrawable="@drawable/correo"
                app:startIconTint="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/black"
                    app:hintTextColor="@color/greyLigth" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    tools:ignore="UselessParent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/password"
                        android:textColor="@color/greyLigth"
                        app:boxCornerRadiusBottomEnd="25dp"
                        app:boxCornerRadiusBottomStart="25dp"
                        app:boxCornerRadiusTopEnd="25dp"
                        app:boxCornerRadiusTopStart="25dp"
                        app:boxStrokeColor="@color/greyLigth"
                        app:endIconContentDescription="Click para mostrar u ocultar la contraseña"
                        app:endIconTint="@color/grey"
                        app:endIconMode="password_toggle"
                        app:hintTextColor="@color/greyLigth"
                        app:startIconContentDescription="Clic para generar una contraseña aleatoria"
                        app:startIconDrawable="@drawable/lock_solid"
                        app:startIconTint="@color/blue">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextPassword"
                            android:layout_width="255dp"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textColor="@color/black"
                            app:hintTextColor="@color/greyLigth" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imageViewGenerar2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="260dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/circle_plus"
                        app:endIconContentDescription="Clic para generar una contraseña segura"
                        app:tint="@android:color/holo_green_dark" />
                </FrameLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/url"
                android:textColor="@color/greyLigth"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:boxStrokeColor="@color/greyLigth"
                app:hintTextColor="@color/greyLigth"
                app:startIconContentDescription="url icon"
                app:startIconDrawable="@drawable/url"
                app:startIconTint="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/black"
                    app:hintTextColor="@color/greyLigth" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/descripcion"
                android:textColor="@color/greyLigth"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:boxStrokeColor="@color/greyLigth"
                app:hintTextColor="@color/greyLigth"
                app:startIconContentDescription="descripcion icon"
                app:startIconDrawable="@drawable/descripcion"
                app:startIconTint="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="87dp"
                    android:inputType="text"
                    android:textColor="@color/black"
                    app:hintTextColor="@color/greyLigth" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_guardar"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="231dp"
        android:layout_height="61dp"
        android:layout_marginTop="530dp"
        android:backgroundTint="@color/blue"
        android:text="@string/boton_guardar"
        android:textColor="@color/white"
        app:cardElevation="15dp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.21"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>