<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <View
        android:id="@+id/viewBlue"
        android:layout_width="412dp"
        android:layout_height="364dp"
        android:background="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

 <TextView
        android:id="@+id/textTitle"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="16dp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="327dp"
        android:layout_height="430dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="30dp"
        app:cardElevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView2"
            android:layout_width="328dp"
            android:layout_height="70dp"
            android:layout_marginBottom="60dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="30dp"
            app:cardElevation="8dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textTitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:text="@string/log_in"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="30sp"
                    android:textStyle="italic" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="173dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <!-- Primer campo de entrada -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo"
                android:textColor="@color/greyLigth"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:boxStrokeColor="@color/greyLigth"
                app:hintTextColor="@color/greyLigth"
                app:startIconContentDescription="Correo icon"
                app:startIconDrawable="@drawable/correo"
                app:startIconTint="@color/greyLigth">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/greyLigth"
                    app:hintTextColor="@color/greyLigth" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Segundo campo de entrada -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:textColor="@color/greyLigth"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:boxStrokeColor="@color/greyLigth"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/grey"
                app:errorEnabled="true"
                app:hintTextColor="@color/greyLigth"
                app:startIconContentDescription="Lock icon"
                app:startIconDrawable="@drawable/lock_solid"
                app:startIconTint="@color/greyLigth">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/greyLigth" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/linkRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="350dp"
            android:text="No estas registrado?"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toTopOf="@+id/materialButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.72"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cardView" />
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_m"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="231dp"
        android:layout_height="61dp"
        android:layout_marginTop="373dp"
        android:backgroundTint="@color/blue"
        android:text="@string/log_in"
        android:textColor="@color/white"
        app:cardElevation="15dp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.21"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>